--- a/www/templates/searcherPopup.html
+++ b/www/templates/searcherPopup.html
@@ -5,7 +5,7 @@
             <button class="button button-clear" ng-click="searcher.close()">Cerrar</button>
         </div>
     </ion-header-bar>
-    <ion-content>
+    <ion-content padding="true">
         <form>
             <div class="list">
                 <label class="item item-input">
@@ -20,7 +20,7 @@
                 <i class="icon ion-checkmark" ng-show="r.Selected"></i>
             </div>
             <button class="button button-assertive button-full" ng-show="searcher.showAddButton" ng-click="searcher.select(searcher.search)">
-                ¡Opps! ¿Desea usar este dato?
+                ¡Sin resultados! ¿Desea usar este dato?
             </button>
         </div>
         <div class="list" ng-if="searcher.group == 2">
@@ -29,7 +29,7 @@
                 <i class="icon ion-checkmark" ng-show="r.Selected"></i>
             </div>
             <button class="button button-assertive button-full" ng-show="searcher.showAddButton" ng-click="searcher.select(searcher.search)">
-                ¡Opps! ¿Desea usar este dato?
+                ¡Sin resultados! ¿Desea usar este dato?
             </button>
         </div>
         <div class="list" ng-if="searcher.group == 3">
@@ -45,7 +45,7 @@
             </div>
             <div class="spacer"></div>
             <a class="button button-assertive button-full" ng-show="searcher.showAddButton" href="#/app/customer/{{ searcher.search}}">
-                ¡Opps! ¿Desea usar este dato?
+                ¡Sin resultados! ¿Desea usar este dato?
             </a>
         </div>
     </ion-content>
