--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -1,5 +1,17 @@
 <ion-view view-title="Historial" can-swipe-back="false" hide-back-button="true">
     <ion-content class="has-header" padding="true">
+        <p>
+            probablemente hay errores al quitar articulos de la lista de insumos
+*****se deberia traer ordenada la lista de checks
+el modo en el que resuelve que modelos debe mostrar no es del todo optimo
+*****la lista de celdas se deberia traer ordenada
+*****la lista de articulos deberia traerse ordenada
+la lista de insumos deberia traerse ordenada
+falta que los titulos cambien segun el tab seleccionado
+no generar actions.push si no son extrictamente necesarios
+listas de tipo de conector en una sola fila
+hay un error con el item de insumos cuando este se encuentra vacio
+        </p>
         <form name="recordsForm" ng-class="{'show-errors': showErrors}">
             <div class="row responsive-sm">
                 <div class="col">
