Incluyo home, luego de este commit desaparece el menú lateral

--- a/www/templates/customer.html
+++ b/www/templates/customer.html
@@ -1,6 +1,6 @@
 <ion-view title="Nuevo cliente" cache-view="false">
     <ion-content class="has-header" padding="true">
-        <form name="customerForm" ng-class="{'show-errors': showErrors}" ng-submit="saveCustomer()">
+        <form name="customerForm" ng-class="{'show-errors': showErrors}" ng-submit="save()">
             <div class="row responsive-sm">
                 <div class="col">
                     <label class="item item-input item-select">
