--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Iniciar sesión" can-swipe-back="false" hide-back-button="true">
+<ion-view title="Iniciar sesión" cache-view="false">
     <ion-content class="has-header" padding="true">
         <form name="loginForm" ng-class="{'show-errors': showErrors}" ng-submit="sigIn()">
             <div class="list">
