--- a/www/templates/tools.html
+++ b/www/templates/tools.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Herramientas" can-swipe-back="false" hide-back-button="true">
+<ion-view view-title="Herramientas" cache-view="false">
     <ion-content class="has-header" padding="true">
         <button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Cerrar sesión</button>
         <div class="list">
