Cambios en el menú, ahora existe una vista principal

--- a/www/templates/customer.html
+++ b/www/templates/customer.html
@@ -1,4 +1,4 @@
-<ion-view title="Nuevo cliente" cache-view="false">
+<ion-view title="Nuevo cliente">
     <ion-content class="has-header" padding="true">
         <form name="customerForm" ng-class="{'show-errors': showErrors}" ng-submit="save()">
             <div class="row responsive-sm">
