--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Inicio">
+<ion-view view-title="Inicio" can-swipe-back="false">
 <ion-content class="has-header" padding="true">
 <div class="list">
 
@@ -6,14 +6,14 @@
     Baterías
 </div>
 <button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Nuevo ensamble</button>
-<a class="button button-positive button-block" href="#/app/new">Nuevo mantenimiento</a>
-<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Consultar historia</button>
+<a class="button button-positive button-block" href="#/new">Nuevo mantenimiento</a>
+<a class="button button-positive button-block" href="#/records">Consultar historial</a>
 
 <div class="item item-divider">
     Cargadores
 </div>
-<a class="button button-positive button-block" href="#/app/new">Nuevo mantenimiento</a>
-<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Consultar historia</button>
+<a class="button button-positive button-block" href="#/new">Nuevo mantenimiento</a>
+<a class="button button-positive button-block" href="#/records">Consultar historial</a>
 
 <div class="item item-divider">
     Otras funciones
