--- a/www/templates/new.html
+++ b/www/templates/new.html
@@ -1,4 +1,4 @@
-<ion-view title="{{ title}}" cache-view="false">
+<ion-view title="{{ title}}">
     <ion-tabs class="tabs-positive tabs-icon-top">
         <ion-tab title="Inicio" icon="ion-calendar" hidden="{{ !tabs.starterTab}}">
             <ion-scroll>
