--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Historial" can-swipe-back="false" hide-back-button="true">
+<ion-view view-title="Historial">
     <ion-content class="has-header" padding="true">
         <p>
             probablemente hay errores al quitar articulos de la lista de insumos
