--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,19 +6,19 @@
     Baterías
 </div>
 <button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Nuevo ensamble</button>
-<a class="button button-positive button-block" href="#/new">Nuevo mantenimiento</a>
-<a class="button button-positive button-block" href="#/records">Consultar historial</a>
+<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
+<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
 
 <div class="item item-divider">
     Cargadores
 </div>
-<a class="button button-positive button-block" href="#/new">Nuevo mantenimiento</a>
-<a class="button button-positive button-block" href="#/records">Consultar historial</a>
+<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
+<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
 
 <div class="item item-divider">
     Otras funciones
 </div>
-<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Sincronizar datos con el servidor</button>
+<button class="button button-positive button-block" ng-click="synchronizeData()" ng-disabled="runningProcess">Sincronizar datos con el servidor</button>
 <button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Cerrar sesión usuario</button>
 
 </div>
