Adición de logos

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,7 @@
-<ion-view title="Iniciar sesión" can-swipe-back="false">
+<ion-view title="Bienvenido" can-swipe-back="false">
     <ion-content class="has-header" padding="true">
+        <img src="/img/escol.jpg" style="width:64%;" />
+        <img src="/img/midac1.png" style="width:34%;" />
         <form name="loginForm" ng-class="{'show-errors': showErrors}" ng-submit="sigIn()">
             <div class="list">
                 <label class="item item-input">
