--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,27 +1,26 @@
-<ion-view view-title="Inicio" can-swipe-back="false">
-<ion-content class="has-header" padding="true">
-<div class="list">
+<ion-view view-title="Menú principal" can-swipe-back="false">
+	<ion-content class="has-header" padding="true">
+		<img src="/img/escol.jpg" style="width:64%;" />
+		<img src="/img/midac1.png" style="width:34%;" />
+		<div class="list">
+			<div class="item item-divider">
+				Baterías
+			</div>
+			<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Nuevo ensamble</button>
+			<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
+			<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
 
-  <div class="item item-divider">
-    Baterías
-</div>
-<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Nuevo ensamble</button>
-<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
-<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
+			<div class="item item-divider">
+				Cargadores
+			</div>
+			<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
+			<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
 
-<div class="item item-divider">
-    Cargadores
-</div>
-<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
-<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
-
-<div class="item item-divider">
-    Otras funciones
-</div>
-<button class="button button-positive button-block" ng-click="synchronizeData()" ng-disabled="runningProcess">Sincronizar datos con el servidor</button>
-<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Cerrar sesión usuario</button>
-
-</div>
-
-</ion-content>
+			<div class="item item-divider">
+				Otras funciones
+			</div>
+			<button class="button button-positive button-block" ng-click="synchronizeData()" ng-disabled="runningProcess">Sincronizar datos con el servidor</button>
+			<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Cerrar sesión usuario</button>
+		</div>
+	</ion-content>
 </ion-view>
