--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Menú principal" can-swipe-back="false">
 	<ion-content class="has-header" padding="true">
-		<img src="/img/escol.jpg" style="width:64%;" />
-		<img src="/img/midac1.png" style="width:34%;" />
+		<img src="img/escol.jpg" style="width:64%;" />
+		<img src="img/midac1.png" style="width:34%;" />
 		<div class="list">
 			<div class="item item-divider">
 				Baterías
