Avances de la nueva versión

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Bienvenido" can-swipe-back="false">
+<ion-view title="Bienvenido">
     <ion-content class="has-header" padding="true">
         <img src="img/escol.jpg" style="width:64%;" />
         <img src="img/midac1.png" style="width:34%;" />
