--- a/www/templates/searcherPopup.html
+++ b/www/templates/searcherPopup.html
@@ -44,7 +44,7 @@
                 <i class="icon ion-checkmark" ng-show="r.Selected"></i>
             </div>
             <div class="spacer"></div>
-            <a class="button button-assertive button-full" ng-show="searcher.showAddButton" href="#/app/customer/{{ searcher.search}}">
+            <a class="button button-assertive button-full" ng-show="searcher.showAddButton" href="#/new-customer/{{ searcher.search }}">
                 ¡Sin resultados! ¿Desea usar este dato?
             </a>
         </div>
