--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Menú principal" can-swipe-back="false">
+<ion-view view-title="Menú principal">
 	<ion-content class="has-header" padding="true">
 		<img src="img/escol.jpg" style="width:64%;" />
 		<img src="img/midac1.png" style="width:34%;" />
@@ -6,15 +6,15 @@
 			<div class="item item-divider">
 				Baterías
 			</div>
-			<button class="button button-positive button-block" ng-click="sigOut()" ng-disabled="runningProcess">Nuevo ensamble</button>
-			<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
-			<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
+			<a ng-if="userSession.isEscolUser" class="button button-positive button-block" href="#/new-assembly/Battery" ng-disabled="runningProcess">Nuevo ensamble</a>
+			<a ng-if="userSession.isEscolUser" class="button button-positive button-block" href="#/new-maintenance/Battery" ng-disabled="runningProcess">Nuevo mantenimiento</a>
+			<a class="button button-positive button-block" href="#/records/Battery" ng-disabled="runningProcess">Consultar historial</a>
 
 			<div class="item item-divider">
 				Cargadores
 			</div>
-			<a class="button button-positive button-block" href="#/new" ng-disabled="runningProcess">Nuevo mantenimiento</a>
-			<a class="button button-positive button-block" href="#/records" ng-disabled="runningProcess">Consultar historial</a>
+			<a ng-if="userSession.isEscolUser" class="button button-positive button-block" href="#/new-maintenance/Charger" ng-disabled="runningProcess">Nuevo mantenimiento</a>
+			<a class="button button-positive button-block" href="#/records/Charger" ng-disabled="runningProcess">Consultar historial</a>
 
 			<div class="item item-divider">
 				Otras funciones
