--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -36,7 +36,7 @@ hay un error con el item de insumos cuando este se encuentra vacio
                 </div>
                 <div class="col">
                     <label class="item item-input">
-                        <span class="input-label">Bateria / cargador</span>
+                        <span class="input-label">{{ filters.objectType }}</span>
                         <input type="text" class="selector-dialog" readonly ng-model="filters.objectTypeDescription" ng-focus="searchObjectType(recordsForm.$valid)">
                     </label>
                 </div>
@@ -44,12 +44,12 @@ hay un error con el item de insumos cuando este se encuentra vacio
 
             <div class="row responsive-sm">
                 <div class="col">
-                    <a class="button button-positive button-block" href="#/app/new/{{ filters.customerId}}/{{ filters.objectTypeType}}/{{ filters.objectTypeId}}" ng-disabled="runningProcess || !(filters.objectTypeId)">Nuevo mantenimiento</a>
+                    <a class="button button-positive button-block" href="#/new-maintenance/{{ filters.objectType }}/{{ filters.customerId }}/{{ filters.objectTypeId }}" ng-disabled="runningProcess || !(filters.objectTypeId)">Nuevo mantenimiento</a>
                 </div>
             </div>
         </form>
         <div class="list">
-            <a class="item" ng-repeat="r in history" href="#/app/details/{{ r.Id}}">
+            <a class="item" ng-repeat="r in history" href="#/maintenance/{{ r.Id}}">
                 {{ r.Date | date : 'dd/MM/yyyy' }} -> 
                 {{ r.Type.indexOf('Maintenance') >= 0 ? 'Mantenimiento ' : 'Ensamble '}}
                 {{ r.Preventive === true ? 'preventivo ' : '' }}
