--- a/www/templates/maintenance.html
+++ b/www/templates/maintenance.html
@@ -1,6 +1,6 @@
 <ion-view title="{{ title}}">
     <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button class="button-clear">
+      <ion-nav-back-button class="button-clear" ng-click="myGoBack()">
         <i class="ion-arrow-left-c"></i> Inicio
       </ion-nav-back-button>
     </ion-nav-bar>
