--- a/www/templates/maintenance.html
+++ b/www/templates/maintenance.html
@@ -1,11 +1,11 @@
-<ion-view title="{{ title}}">
+<ion-view title="{{ title }}">
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button class="button-clear" ng-click="myGoBack()">
         <i class="ion-arrow-left-c"></i> Inicio
       </ion-nav-back-button>
     </ion-nav-bar>
     <ion-tabs class="tabs-positive tabs-icon-top">
-        <ion-tab title="Inicio" icon="ion-calendar" hidden="{{ !tabs.starterTab}}">
+        <ion-tab title="Cliente" icon="ion-calendar" hidden="{{ !tabs.starterTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="starterForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -36,7 +36,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Batería" icon="ion-battery-charging" hidden="{{ !tabs.batteryTab}}">
+        <ion-tab title="Batería" icon="ion-battery-charging" hidden="{{ !tabs.batteryTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="batteryForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -119,7 +119,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Cargador" icon="ion-flash" hidden="{{ !tabs.chargerTab}}">
+        <ion-tab title="Cargador" icon="ion-flash" hidden="{{ !tabs.chargerTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="chargerForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -152,7 +152,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Máquina" icon="ion-gear-a" hidden="{{ !tabs.machineTab}}">
+        <ion-tab title="Máquina" icon="ion-gear-a" hidden="{{ !tabs.machineTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="machineForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -192,7 +192,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Labor" icon="ion-hammer" hidden="{{ !tabs.workToBeDoneTab}}">
+        <ion-tab title="Labor" icon="ion-hammer" hidden="{{ !tabs.workToBeDoneTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="workToBeDoneForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -204,7 +204,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Inspección" icon="ion-clipboard" hidden="{{ !tabs.physicalInspectionTab}}">
+        <ion-tab title="Inspección" icon="ion-clipboard" hidden="{{ !tabs.physicalInspectionTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="physicalInspectionForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -223,7 +223,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Celdas" icon="ion-battery-empty" hidden="{{ !tabs.cellInspectionTab}}">
+        <ion-tab title="Celdas" icon="ion-battery-empty" hidden="{{ !tabs.cellInspectionTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="cellInspectionForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -255,7 +255,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Insumos" icon="ion-medkit" hidden="{{ !tabs.suppliesTab}}">
+        <ion-tab title="Insumos" icon="ion-medkit" hidden="{{ !tabs.suppliesTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="suppliesForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -279,7 +279,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Reporte" icon="ion-compose" hidden="{{ !tabs.technicalReportTab}}">
+        <ion-tab title="Reporte" icon="ion-compose" hidden="{{ !tabs.technicalReportTab}}" on-select="refreshTitle()">
             <ion-scroll>
                 <form name="technicalReportForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
@@ -291,7 +291,7 @@
                 <div class="spacer spacer-footer"></div>
             </ion-scroll>
         </ion-tab>
-        <ion-tab title="Fin" icon="ion-checkmark" hidden="{{ !tabs.endingTab}}">
+        <ion-tab title="Fin" icon="ion-checkmark" hidden="{{ !tabs.endingTab}}" on-select="refreshTitle()">
             <ion-content scroll="false">
                 <form name="endingForm" class="maintenance-validate" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
