Avances de la nueva versión

--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -1,16 +1,16 @@
 <ion-view view-title="Historial">
     <ion-content class="has-header" padding="true">
         <p>
-            probablemente hay errores al quitar articulos de la lista de insumos
+            <!-- probablemente hay errores al quitar articulos de la lista de insumos
 *****se deberia traer ordenada la lista de checks
-el modo en el que resuelve que modelos debe mostrar no es del todo optimo
+*****el modo en el que resuelve que modelos debe mostrar no es del todo optimo
 *****la lista de celdas se deberia traer ordenada
 *****la lista de articulos deberia traerse ordenada
-la lista de insumos deberia traerse ordenada
-falta que los titulos cambien segun el tab seleccionado
-no generar actions.push si no son extrictamente necesarios
+*****la lista de insumos deberia traerse ordenada
+*****falta que los titulos cambien segun el tab seleccionado
+*****no generar actions.push si no son extrictamente necesarios
 listas de tipo de conector en una sola fila
-hay un error con el item de insumos cuando este se encuentra vacio
+hay un error con el item de insumos cuando este se encuentra vacio -->
         </p>
         <form name="recordsForm" ng-class="{'show-errors': showErrors}">
             <div class="row responsive-sm">
